Mon Apr 05 17:21:06 BST 2004  Olly Betts <olly@survex.com>

	* README: There never was an Omsee release - the last BrightStation
	  release was "OpenMuscat 0.4.1".

Mon Apr 05 17:19:38 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc,
	  backends/quartz/quartz_database.h: Make the flush criterion 1000
	  documents changed (added, removed, or replaced) as that seems to
	  perform much better over a wide variety of document sizes.

Thu Apr 01 01:04:17 BST 2004  Olly Betts <olly@survex.com>

	* tests/quartztest.cc: Fixed temporary directory used (a slash was
	  missing).

Thu Apr 01 00:39:59 BST 2004  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated.

Fri Mar 26 22:33:30 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc: Fix problems with termfreq and
	  collfreq in postlist getting out of step when a recently modified
	  or deleted document is deleted or remodified.

Fri Mar 26 12:31:24 GMT 2004  Olly Betts <olly@survex.com>

	* configure.in: Fixed check for --enable-runtime-pseudo-reloc.

Fri Mar 26 12:31:00 GMT 2004  Olly Betts <olly@survex.com>

	* bin/Makefile.am: Removed spurious "-lz" from quartzdump_LDADD.

Thu Mar 25 00:22:13 GMT 2004  Olly Betts <olly@survex.com>

	* bin/quartzcheck.cc: Check the structure with the postlist Btree
	  as well as the Btree structures themselves.

Sun Mar 21 00:00:59 GMT 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_table_manager.cc: Fix for building on mingw.

Sat Mar 20 23:04:27 GMT 2004  Olly Betts <olly@survex.com>

	* include/xapian/positioniterator.h,include/xapian/postingiterator.h:
	  Add doxygen comments in front of PostingIterator and
	  PositionListIterator classes so that doxygen pulls out the
	  existing documentation for their methods.

Sat Mar 20 16:23:13 GMT 2004  Olly Betts <olly@survex.com>

	* configure.in,backends/quartz/quartz_table_manager.cc,common/utils.h:
	  Added configure test for link() to avoid infinite loop on mingw!
