@@ -3,7 +3,7 @@
  */
 /* ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2002,2003 Olly Betts
+ * Copyright 2002,2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -97,7 +97,8 @@ class Error {
 	virtual ~Error() { }
 };
 
-#define DEFINE_ERROR_BASECLASS(a, b) \
+/// @Internal Macro magic to define error base class.
+#define XAPIAN_DEFINE_ERROR_BASECLASS(a, b) \
 class a : public b { \
     protected: \
 	/** Constructor used by derived classes. */ \
@@ -107,7 +108,8 @@ class a : public b { \
 	  int errno_value_) : b(msg_, context_, type_, errno_value_) {} \
 }
 
-#define DEFINE_ERROR_CLASS(a, b) \
+/// @Internal Macro magic to define derived error class.
+#define XAPIAN_DEFINE_ERROR_CLASS(a, b) \
 class a : public b { \
     public: \
 	/** Constructor used publically. */ \
@@ -127,8 +129,8 @@ class a : public b { \
 
 #include <xapian/errortypes.h>
 
-#undef DEFINE_ERROR_BASECLASS
-#undef DEFINE_ERROR_CLASS
+#undef XAPIAN_DEFINE_ERROR_BASECLASS
+#undef XAPIAN_DEFINE_ERROR_CLASS
 
 }
 
