@@ -5,7 +5,7 @@
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003 Olly Betts
+ * Copyright 2002,2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -29,6 +29,7 @@
 
 #include <fstream>
 
+/// @Internal Helper macro for defining stream output of Xapian class.
 #define XAPIAN_OUTPUT_FUNCTION(CLASS) \
 inline std::ostream & \
 operator<<(std::ostream & os, const CLASS & object) { \
