@@ -1,3 +1,9 @@
+Tue Apr 06 03:32:39 BST 2004  Olly Betts <olly@survex.com>
+
+	* net/omerr_string.cc,include/xapian/error.h,
+	  include/xapian/errortypes.h,include/xapian/output.h:
+	  Fixed some doxygen warnings.
+
 Mon Apr 05 17:21:06 BST 2004  Olly Betts <olly@survex.com>
 
 	* README: There never was an Omsee release - the last BrightStation
